--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-source.soot-ifds.jar = src/
+source.soot-ifds.jar = src-generic/
 bin.includes = META-INF/,\
                soot-ifds.jar,\
                soot-trunk.jar,\
