--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/soot"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src-generic"/>
-	<classpathentry kind="src" path="src-soot"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="guava-13.0.jar"/>
-	<classpathentry kind="lib" path="soot-trunk.jar" sourcepath="/soot"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
