--- a/heros-debugui/.classpath
+++ b/heros-debugui/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="de/ishuo/sourcepainter/|de/ishuo/sourcepainter/handler/" kind="src" path="src"/>
 	<classpathentry kind="lib" path="heros.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
