--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,8 @@
         >
         	<classpath>
         		<pathelement location="${guava.jar}"/>
+        		<pathelement location="slf4j-api-1.7.5.jar"/>
+        		<pathelement location="slf4j-simple-1.7.5.jar"/>
         	</classpath>
             <src path="src"/>
         </javac>
