--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="guava-14.0.1.jar"/>
-	<classpathentry kind="lib" path="slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="slf4j-simple-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="slf4j-api-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="slf4j-simple-1.7.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
