--- a/build.xml
+++ b/build.xml
@@ -114,5 +114,21 @@
 			<report format="frames" todir="reports" />
 		</junitreport>
 	</target>
-
+    
+    <target name="javadoc">
+        <javadoc
+            classpath="build/classes"
+            sourcepath="src"
+			destdir="javadoc"
+            maxmemory="400m"
+            link="${javaapi.url}"
+            windowtitle="Heros API"
+            use="true"
+            useexternalfile="true"
+        >
+            <fileset dir="src" includes="**/*.java"/>
+        </javadoc>
+		<jar basedir="javadoc" destfile="herosjavadoc-${heros.version}.jar" />
+	</target>
+	
 </project>
