--- a/build.xml
+++ b/build.xml
@@ -173,11 +173,9 @@
 	</target>
 
 	<target name="publish-local" depends="init-ivy, jar, classesjar, sourcejar, javadoc">
-		<copy file="heros-${heros.version}.jar" tofile="herosjar-${heros.version}.jar" />
-		<copy file="herossources-${heros.version}.jar" tofile="herossource-${heros.version}.jar" />
 		<ivy:resolve/>
 		<ivy:publish pubrevision="${heros.version}" status="release" resolver="local" overwrite="true" >
-			<artifacts pattern="[artifact][type]-[revision].[ext]"/>
+			<artifacts pattern="[artifact]-[revision].[ext]"/>
 		</ivy:publish>
 	</target>
 
