--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,9 @@
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="heros" default="jar">
     <property file="ant.settings"/>
 
-	<property name="ivy.install.version" value="2.1.0-rc2" />
+	<property name="ivy.install.version" value="2.1.0" />
+	<property name="ivy.jar.version" value="2.1.0" />
+	
 	<condition property="ivy.home" value="${env.IVY_HOME}">
 		<isset property="env.IVY_HOME" />
 	</condition>
@@ -171,10 +173,23 @@
 		<taskdef resource="org/apache/ivy/ant/antlib.xml"
 				 uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
 	</target>
+	
+	<target name="gen-pom" depends="init-ivy">
+		<ivy:makepom ivyfile="ivy.xml" pomfile="${ant.project.name}-${heros.version}.pom">
+			<!--<mapping conf="default" scope="compile"/>-->
+		</ivy:makepom>
+	</target>
 
 	<target name="publish-local" depends="init-ivy, jar, classesjar, sourcejar, javadoc">
 		<ivy:resolve/>
 		<ivy:publish pubrevision="${heros.version}" status="release" resolver="local" overwrite="true" >
+			<artifacts pattern="[artifact]-[revision].[ext]"/>
+		</ivy:publish>
+	</target>
+	
+	<target name="publish-local-maven" depends="init-ivy, gen-pom, jar, classesjar, sourcejar, javadoc" description="publish jar/source to maven repo mounted at ~/.m2/repository">
+		<ivy:resolve/>
+		<ivy:publish pubrevision="${heros.version}" resolver="local-m2-publish" forcedeliver="true" overwrite="true" publishivy="false">
 			<artifacts pattern="[artifact]-[revision].[ext]"/>
 		</ivy:publish>
 	</target>
