--- a/build.xml
+++ b/build.xml
@@ -155,10 +155,10 @@
 
 	<target name="download-ivy" unless="offline">
 
-		<mkdir dir="${ivy.jar.dir}"/>
+		<mkdir dir="${ivy.jar.dir}" />
 		<!-- download Ivy from web site so that it can be used even without any special installation -->
 		<get src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
-			 dest="${ivy.jar.file}" usetimestamp="true"/>
+			 dest="${ivy.jar.file}" usetimestamp="true" />
 	</target>
 
 	<target name="init-ivy" depends="download-ivy">
@@ -167,30 +167,30 @@
                 We will not fail as long as local lib dir exists (it may be empty) and
                 ivy is in at least one of ant's lib dir or the local lib dir. -->
 		<path id="ivy.lib.path">
-			<fileset dir="${ivy.jar.dir}" includes="*.jar"/>
+			<fileset dir="${ivy.jar.dir}" includes="*.jar" />
 
 		</path>
 		<taskdef resource="org/apache/ivy/ant/antlib.xml"
-				 uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
+				 uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
 	</target>
 	
 	<target name="gen-pom" depends="init-ivy">
 		<ivy:makepom ivyfile="ivy.xml" pomfile="${ant.project.name}-${heros.version}.pom">
-			<!--<mapping conf="default" scope="compile"/>-->
+			<mapping conf="default" scope="compile" />
 		</ivy:makepom>
 	</target>
 
-	<target name="publish-local" depends="init-ivy, jar, classesjar, sourcejar, javadoc">
+	<target name="publish-local" depends="init-ivy, gen-pom, jar, classesjar, sourcejar, javadoc">
 		<ivy:resolve/>
-		<ivy:publish pubrevision="${heros.version}" status="release" resolver="local" overwrite="true" >
-			<artifacts pattern="[artifact]-[revision].[ext]"/>
+		<ivy:publish pubrevision="${heros.version}" status="release" resolver="local" overwrite="true">
+			<artifacts pattern="[artifact]-[revision].[ext]" />
 		</ivy:publish>
 	</target>
 	
 	<target name="publish-local-maven" depends="init-ivy, gen-pom, jar, classesjar, sourcejar, javadoc" description="publish jar/source to maven repo mounted at ~/.m2/repository">
 		<ivy:resolve/>
 		<ivy:publish pubrevision="${heros.version}" resolver="local-m2-publish" forcedeliver="true" overwrite="true" publishivy="false">
-			<artifacts pattern="[artifact]-[revision].[ext]"/>
+			<artifacts pattern="[artifact]-[revision].[ext]" />
 		</ivy:publish>
 	</target>
 
