fixed contact data

--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
         </developer>
         <developer>
             <name>Steven Arzt</name>
-            <email>eric.bodden@uni-paderborn.de</email>
-            <organization>Frauenhofer SIT</organization>
+            <email>steven.arzt@sit.fraunhofer.de</email>
+            <organization>Fraunhofer SIT</organization>
             <organizationUrl>https://www.sit.fraunhofer.de/en/</organizationUrl>
         </developer>
     </developers>
